[metadata]
name = loki-client
version = 0.0.6
author = hackhan, pawelka
author_email = hackhan@xxx.com, pawelka@yyy.com
description = A Python client interacting with Grafana Loki.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pawelka/loki-client
project_urls =
    Bug Tracker = https://github.com/pawelka/loki-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
